fix z-index

--- a/Lab_5/Zadanie2/src/app/home-screen/home-screen.component.scss
+++ b/Lab_5/Zadanie2/src/app/home-screen/home-screen.component.scss
@@ -88,7 +88,7 @@
 		box-shadow: 3px 4px 8px rgba(0, 0, 0, 0.5);
 		border-radius: 8px;
 		background-image: linear-gradient(120deg, #f6d465 0%, #fd9f85 100%);
-		z-index: 2;
+		z-index: 1;
 		&:not(:last-of-type) {
 			margin-bottom: 2rem;
 		}
