--- a/Lab_5/Zadanie2/src/app/nav/nav.component.scss
+++ b/Lab_5/Zadanie2/src/app/nav/nav.component.scss
@@ -9,7 +9,7 @@
 	padding: 0rem 3rem;
 	height: 10rem;
 	background-color: $primary-color;
-	z-index: 1;
+	z-index: 4;
 	box-sizing: border-box;
 	&__logo {
 		font-size: 4rem;
